登陆注册已完成

--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
     <div class="log">
         <img src="./assets/images/logo.png" alt="">
     </div>
-    <!-- 中间登陆面 -->
-    <div class="login">
+    <!-- 登陆面 -->
+    <div class="login item">
         <!-- 标题 -->
         <div class="title">
             <img src="./assets/images/login_title.png" alt="">
@@ -23,13 +23,13 @@
             <div class="layui-form-item">
                 <div class="layui-input-block">
                 <i class="layui-icon layui-icon-username"></i>   
-                <input type="text" name="username" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+                <input type="text" name="username" required  lay-verify="required|username" value="张美娇" placeholder="请输入用户名" autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
                 <div class="layui-input-block">
                     <i class="layui-icon layui-icon-password"></i>   
-                <input type="text" name="password" required  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                <input type="text" name="password" required  lay-verify="required|pass" value="123456" placeholder="请输入密码" autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
@@ -44,34 +44,34 @@
             </div>
         </form>
     </div>
-    <!-- 中间注册面 -->
-    <div class="register">
+    <!-- 注册 -->
+    <div class="register item">
         <div class="title">
             <img src="./assets/images/login_title.png" alt="">
         </div>
              <!-- 表单 -->
-           <form class="layui-form" action="">
+        <form class="layui-form" action="">
                <div class="layui-form-item">
                    <div class="layui-input-block">
                     <i class="layui-icon layui-icon-username"></i>   
-                   <input type="text" name="username" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+                   <input type="text" name="username" required  lay-verify="required|username" placeholder="请输入用户名" autocomplete="off" class="layui-input">
                    </div>
                </div>
                <div class="layui-form-item">
                    <div class="layui-input-block">
                     <i class="layui-icon layui-icon-password"></i>   
-                   <input type="password" name="password" required  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                   <input type="password" name="password" required  lay-verify="required|pass|repass" placeholder="请输入密码" autocomplete="off" class="layui-input">
                    </div>
                </div>
                <div class="layui-form-item">
                 <div class="layui-input-block">
                     <i class="layui-icon layui-icon-password"></i>   
-                    <input type="password" name="password" required  lay-verify="required" placeholder="请确认密码" autocomplete="off" class="layui-input">
+                    <input type="password" required  lay-verify="required|pass" placeholder="请确认密码" autocomplete="off" class="layui-input pwd">
                 </div>
             </div>
                <div class="layui-form-item">
                    <div class="layui-input-block">
-                   <button class="layui-btn layui-btn-normal layui-btn-fluid" lay-submit lay-filter="formDemo">立即提交</button>
+                   <button class="btn-smt layui-btn layui-btn-normal layui-btn-fluid" lay-submit lay-filter="formDemo">立即提交</button>
                    </div>
                </div>
                <div class="layui-form-item">
@@ -79,7 +79,11 @@
                    <a href="#">去登陆账号</a>
                    </div>
                </div>
-           </form>
+        </form>
     </div>
 </body>
+<script src="./assets/lib/jquery.js"></script>
+<script src="./assets/lib/layui/layui.all.js"></script>
+<script src="./assets/js/common.js"></script>
+<script src="./assets/js/login.js"></script>
 </html>
