分类新增已完成

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
               <span class="username">贤心</span>
             </a>
             <dl class="layui-nav-child">
-              <dd><a href="">基本资料</a></dd>
-              <dd><a href="">密码重置</a></dd>
-              <dd><a href="">更换头像</a></dd>
+              <dd><a href="./user/usr-info.html" target="main_iframe">基本资料</a></dd>
+              <dd><a href="./user/user-reset.html" target="main_iframe">密码重置</a></dd>
+              <dd><a href="./user/user-avatar.html" target="main_iframe">更换头像</a></dd>
             </dl>
           </li>
           <li class="layui-nav-item"><a href="javascript:;" class="logout">退了</a></li>
@@ -49,7 +49,7 @@
               <span class="username">贤心</span>
             </li>
             <li class="layui-nav-item layui-this">
-              <a href="">
+              <a target='main_iframe' href="./home/dashboard.html">
                 <i class="layui-icon layui-icon-home"></i>
                 首页</a
               >
@@ -61,20 +61,20 @@
               >
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="javascript:;">
+                  <a href="./article/article-category.html" target="main_iframe">
                     <i class="layui-icon layui-icon-app"></i>
 
                     文章类别</a
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;">
+                  <a href="./article/article-list.html" target="main_iframe">
                     <i class="layui-icon layui-icon-app"></i>
                     文章列表</a
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;">
+                  <a href="./article/article-rease.html" target="main_iframe">
                     <i class="layui-icon layui-icon-app"></i>
                     发表文章</a
                   >
@@ -89,19 +89,19 @@
               >
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="">
+                  <a href="./user/usr-info.html" target="main_iframe">
                     <i class="layui-icon layui-icon-app"></i>
                     基本资料</a
                   >
                 </dd>
                 <dd>
-                  <a href="">
+                  <a href="./user/user-reset.html" target="main_iframe">
                     <i class="layui-icon layui-icon-app"></i>
                     密码重置</a
                   >
                 </dd>
                 <dd>
-                  <a href="">
+                  <a href="./user/user-avatar.html" target="main_iframe">
                     <i class="layui-icon layui-icon-app"></i>
                     更换头像</a
                   >
@@ -114,7 +114,7 @@
 
       <div class="layui-body">
         <!-- 内容主体区域 -->
-        <div style="padding: 15px">内容主体区域</div>
+      <iframe name='main_iframe' src="./home/dashboard.html" width="100%" height="100%" frameborder="0"></iframe>
       </div>
 
       <div class="layui-footer">
